--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="to">to</string>
     <string name="confirm_button">Confirm</string>
     <string name="update_button">Upload to Start gg</string>
+    <string name="upcoming_sets">Upcoming Sets:</string>
+    <string name="stations_button">Configure Stations</string>
+    <string name="call_button">Call Set</string>
+    <string name="decline_button">Decline Set</string>
+    <string name="stream_button">Call Set to Stream</string>
 </resources>
