--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="to">to</string>
     <string name="confirm_button">Confirm</string>
     <string name="update_button">Upload to Start gg</string>
+    <string name="title_app">Start.gg TO Toolkit</string>
+    <string name="login_button">LOG IN</string>
 </resources>
