--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="update_button">Upload to Start gg</string>
     <string name="title_app">TO Toolkit</string>
     <string name="login_button">LOG IN</string>
-    <string name="tournament_view_title">Tournament Select</string>
+    <string name="tournament_view_title">Select Tournament</string>
 </resources>
