--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="to">to</string>
     <string name="confirm_button">Confirm</string>
     <string name="update_button">Upload to Start gg</string>
-    <string name="title_app">TO Toolkit</string>
+    <string name="title_app">Bracket Buddy</string>
     <string name="login_button">LOG IN</string>
     <string name="tournament_view_title">Select Tournament</string>
     <string name="no_tournaments_message">You do not have any upcoming tournaments.</string>
